--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -1,177 +1,22 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Content Manager</title>
-    <meta name="robots" content="noindex" />
-  </head>
-  <body>
-    <!-- Decap CMS -->
-    <script src="https://unpkg.com/decap-cms@3.0.0/dist/decap-cms.js"></script>
+<head>
+  <meta charset="utf-8" />
+  <title>Content Manager</title>
+  <meta name="robots" content="noindex" />
+</head>
+<body>
+  <!-- Load Decap CMS -->
+  <script src="https://unpkg.com/decap-cms@latest/dist/decap-cms.js?v=10"></script>
 
-    <script>
-      window.CMS_MANUAL_INIT = true;
-
-      document.addEventListener("DOMContentLoaded", function () {
-        CMS.init({
-          config: {
-            backend: {
-              name: "git-gateway",
-              branch: "main",
-            },
-            media_folder: "public/uploads",
-            public_folder: "/uploads",
-            collections: [
-              {
-                name: "settings",
-                label: "Site Settings",
-                files: [
-                  {
-                    file: "src/content/settings/hero.json",
-                    name: "hero",
-                    label: "Hero Section",
-                    fields: [
-                      { label: "Title", name: "title", widget: "string" },
-                      { label: "Year Tag", name: "year_tag", widget: "string" },
-                      { label: "Tagline", name: "tagline", widget: "text" },
-                      {
-                        label: "Hero Image",
-                        name: "hero_image",
-                        widget: "image",
-                        required: false,
-                      },
-                    ],
-                  },
-                  {
-                    file: "src/content/settings/trip_overview.json",
-                    name: "trip_overview",
-                    label: "Trip Overview",
-                    fields: [
-                      { label: "Heading", name: "heading", widget: "string" },
-                      {
-                        label: "Subheading",
-                        name: "subheading",
-                        widget: "text",
-                      },
-                      {
-                        label: "Start Date (display)",
-                        name: "start_date",
-                        widget: "string",
-                      },
-                      {
-                        label: "End Date (display)",
-                        name: "end_date",
-                        widget: "string",
-                      },
-                      {
-                        label: "Cities",
-                        name: "cities",
-                        widget: "list",
-                        field: { label: "City", name: "label", widget: "string" },
-                      },
-                      {
-                        label: "Hotels",
-                        name: "hotels",
-                        widget: "list",
-                        field: {
-                          label: "Hotel",
-                          name: "label",
-                          widget: "string",
-                        },
-                      },
-                    ],
-                  },
-                ],
-              },
-
-              {
-                name: "daily",
-                label: "Daily Posts",
-                folder: "src/content/days",
-                create: true,
-                slug: "day-{{day_number}}",
-                identifier_field: "day_number",
-                fields: [
-                  { label: "Day Number", name: "day_number", widget: "number" },
-                  { label: "Title", name: "title", widget: "string" },
-                  {
-                    label: "Date (display)",
-                    name: "date",
-                    widget: "string",
-                  },
-                  { label: "City", name: "city", widget: "string" },
-                  {
-                    label: "Hero Caption",
-                    name: "hero_caption",
-                    widget: "string",
-                    required: false,
-                  },
-                  {
-                    label: "Hero Image",
-                    name: "hero_image",
-                    widget: "image",
-                    required: false,
-                  },
-
-                  { label: "Morning Text", name: "morning", widget: "text" },
-                  {
-                    label: "Morning Photos",
-                    name: "morning_photos",
-                    widget: "list",
-                    field: {
-                      label: "Photo",
-                      name: "image",
-                      widget: "image",
-                    },
-                  },
-
-                  { label: "Afternoon Text", name: "afternoon", widget: "text" },
-                  {
-                    label: "Afternoon Photos",
-                    name: "afternoon_photos",
-                    widget: "list",
-                    field: {
-                      label: "Photo",
-                      name: "image",
-                      widget: "image",
-                    },
-                  },
-
-                  { label: "Evening Text", name: "evening", widget: "text" },
-                  {
-                    label: "Evening Photos",
-                    name: "evening_photos",
-                    widget: "list",
-                    field: {
-                      label: "Photo",
-                      name: "image",
-                      widget: "image",
-                    },
-                  },
-
-                  {
-                    label: "Kids Rating",
-                    name: "kids_rating",
-                    widget: "string",
-                  },
-                  { label: "Daily Costs", name: "costs", widget: "text" },
-                  { label: "Notes", name: "notes", widget: "text" },
-                  {
-                    label: "Full Gallery",
-                    name: "gallery",
-                    widget: "list",
-                    field: {
-                      label: "Photo",
-                      name: "image",
-                      widget: "image",
-                    },
-                  },
-                ],
-              },
-            ],
-          },
-        });
+  <!-- Load your config file ONLY -->
+  <script>
+    window.CMS_MANUAL_INIT = true;
+    document.addEventListener("DOMContentLoaded", function () {
+      CMS.init({
+        config: "/admin/config.yml?v=10"
       });
-    </script>
-  </body>
+    });
+  </script>
+</body>
 </html>
