Update Decap CMS script version in index.html

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <!-- Load Decap CMS -->
-  <script src="https://unpkg.com/decap-cms@latest/dist/decap-cms.js?v=10"></script>
+ <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
 
   <!-- Load your config file ONLY -->
   <script>
